# set-game-pyglet

./: .gitignore  Pipfile  README.md  game.py  pyproject.toml  requirements.txt  run_game.py  run_game.spec
.github/workflows/: build-exe.yml
examples/: image_grid_loading.py
game/: __init__.py  cards.py  configuration.py  constants.py  custom.py  director.py  fsm.py  gameplay.py  hud.py  menu.py  resources.py
res/src/: sets-green.odg  sets-red.odg  sets-violet.odg
