[project]
name = "set-game"
description = "Set Game written in Python using pyglet library."
authors = [{name = "Pawel Bednarz"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"

[project.urls]
Source = "https://github.com/pbedn/sets-game"
